PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 6.6.0 Milestone 2
7 August 2016

- deploy: Update Debian packaging script
- pts-core: Fix for upload-test-suite (on OpenBenchmarking.org side too)
- pts-core: Show local suites in list-suites
- pts-core: Ensure DragonFlyBSD pkg installation is done automatically
- pts-core: Restructure bash on windows check
- pts-core: Initial work on CLI terminal colored text output
- phoromatic: Web UI styling improvements
- phodevi: Show mdstat RAID Details when available
- pts_Graph: Show extra disk details on system graph

Phoronix Test Suite 6.6.0 Milestone 1
6 July 2016

- pts-core: Add OpenCV to external dependencies list
- pts-core: Disable test cache share when run in stress-run mode
- phoromatic: Allow custom versions to be manually specified on test suite web UI page
- pts_Graph: Show min/max results on multi-way comparisons
- pts_Graph: Color string tweaks
- phodevi: Fix to allow GPU temperature sensor to work with AMDGPU-PRO driver stack

Phoronix Test Suite 6.4.0-Hasvik
2 June 2016

[Only minor changes since 6.4 M4]

Phoronix Test Suite 6.4.0 Milestone 4
31 May 2016

- pts-core: Automatically add used extra OpenBenchmarking.org repositories to the linked list
- pts-core: Don't load empty tests on finish-run command
- pts-core: Add perl-digest-md5 to external dependencies list
- pts-core: Prevent duplicate tests/setting combinations from entering the same test run manager queue
- pts-core: Fix for IE not scaling SVGs in the results viewer
- pts-core: Finish new pts_test_suite API, port build-suite to it
- phoromatic: Support editing and deleting tests in local suites from the Phoromatic Server UI
- phodevi: More detection improvements for NVMe devices on Linux

Phoronix Test Suite 6.4.0 Milestone 3
26 May 2016

- pts-core: XML formatting fix for non-OpenBenchmarking.org deployments
- pts-core: Do more to avoid zombie processes in stress-run manager